[package]
name = "guess_music"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#symphonia = { version = "0.5.3", features = ["mp3"], default-features = false }
rodio = { version = "0.17.1", default-features = false, features = ["mp3"] }
ureq = { version = "2.7.1", features = ["json"] }
serde_json = { version = "1.0.100" }
rand = { version = "0.8.5" }
serde = { version = "1.0.167", features = ["derive"] }
serde-xml-rs = "0.6.0"
md5 = { version = "0.7.0" }
colored = { version = "2.0.4" }
sublime_fuzzy = "0.7.0"
ctrlc = "3.4.0"
deunicode = {version = "1.3.3"}

[profile.release.package."*"]
opt-level = 3
strip = true
debug = false
split-debuginfo = 'packed'  # Platform-specific.
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[profile.release]
opt-level = 3
strip = true
debug = false
split-debuginfo = 'packed'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false